refactor: rename service to game-events.io

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "com.whalytics.unity",
+  "name": "com.gameevents.unity",
   "version": "1.0.0",
-  "displayName": "Whalytics",
-  "description": "Whalytics Unity SDK for analytics",
+  "displayName": "game-events.io",
+  "description": "game-events.io Unity SDK for analytics",
   "unity": "2019.4",
   "author": {
-    "name": "Whalytics",
-    "email": "support@whalytics.com",
-    "url": "https://whalytics.com"
+    "name": "game-events.io",
+    "email": "support@game-events.io",
+    "url": "https://game-events.io"
   }
 }
