refactor: rename Whalytics to GameEventsIO in Unity and Rust plugins

--- a/Runtime/GameEventsIO.asmdef
+++ b/Runtime/GameEventsIO.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Whalytics",
-    "rootNamespace": "Whalytics",
+    "name": "GameEventsIO",
+    "rootNamespace": "GameEventsIO",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
