--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "unity": "2019.4",
   "author": {
     "name": "game-events.io",
-    "email": "support@game-events.io",
+    "email": "contact@game-events.io",
     "url": "https://game-events.io"
   }
 }
