Switch to unity ATT tracking plugin.

--- a/Runtime/GameEventsIO.asmdef
+++ b/Runtime/GameEventsIO.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "GameEventsIO",
     "rootNamespace": "GameEventsIO",
-    "references": [],
+    "references": [
+        "Unity.Advertisement.IosSupport"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
